Fixed gaps

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -121,7 +121,6 @@
 
 /* MAGAZINE */
 .magazine-design{
-  padding-top: 100px;
   display: flex;
   justify-content: center;
   width:100%;
@@ -171,7 +170,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 100px;
+  padding-top: 00px;
   margin: 0, auto;
   width: 100%;
   height: auto;
